--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "dotenv": "^17.2.1",
-    "framer-motion": "^12.23.11",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
-    "react-parallax-tilt": "^1.7.303"
+    "react-parallax-tilt": "^1.7.304",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
