--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
